# zeptobeam

./: .gitignore  CLAUDE.md  Cargo.toml  LAUNCH_POSTS.md  Makefile  README.md  rust-toolchain.toml
lib-erlangrt/: Cargo.toml
lib-erlangrt/codegen/: atoms.tab  create_gen_atoms.py  create_gen_native_fun.py  create_gen_op.py  create_vm_dispatch.py  implemented_native_funs.tab  implemented_ops.tab
lib-erlangrt/codegen/erlangrt/: genop.py
lib-erlangrt/src/: command_line_args.rs  lib.rs  lib_main.rs
lib-erlangrt/src/agent_rt/: agent_worker.rs  approval_gate.rs  behaviors.rs  bridge.rs  bridge_metrics.rs  chaos.rs  checkpoint.rs  checkpoint_sqlite.rs  cluster.rs  config.rs  dead_letter.rs  decomposition.rs  dets.rs  durable_mailbox.rs  error.rs  ets.rs  hot_code.rs  integration_tests.rs  mcp_client.rs  mcp_jsonrpc.rs  mcp_server.rs  mcp_stdio.rs  mcp_types.rs  mod.rs  observability.rs  orchestration.rs  process.rs  pruner.rs  rate_limiter.rs  registry.rs  release.rs  resource_budget.rs  result_aggregator.rs  retry_policy.rs  scheduler.rs  server.rs  startup.rs  supervision.rs  task_graph.rs  tests.rs  (+2 more)
lib-erlangrt/src/beam/: gen_op.rs  vm_dispatch.rs  vm_loop.rs
lib-erlangrt/src/beam/loader/: beam_file.rs  compact_term.rs  impl_parse_code.rs  impl_setup_imports.rs  impl_stage2.rs  mod.rs
lib-erlangrt/src/beam/opcodes/: mod.rs  op_data.rs  op_execution.rs  op_float.rs  op_fun.rs  op_map.rs  op_memory.rs  op_message.rs  op_native_fun.rs  op_predicates.rs  op_try_catch.rs  op_tuple.rs  op_type_checks.rs
lib-erlangrt/src/defs/: bitsize.rs  data_reader.rs
lib-erlangrt/src/emulator/: funarity.rs  gen_atoms.rs  mailbox.rs  mfa.rs  module.rs  scheduler.rs
lib-erlangrt/src/emulator/code/: opcode.rs
lib-erlangrt/src/emulator/code_srv/: mod.rs
lib-erlangrt/src/emulator/heap/: dump.rs  gc_copying.rs  gc_trait.rs  heap_incremental.rs  mod.rs
lib-erlangrt/src/emulator/runtime_ctx/: call_closure.rs  call_export.rs  call_native_fun.rs  mod.rs
lib-erlangrt/src/fail/: create.rs
lib-erlangrt/src/native_fun/: gen_native_fun.rs  mod.rs  registry.rs
lib-erlangrt/src/native_fun/erlang/: arithmetic.rs  binary.rs  compare.rs  mod.rs  predicate.rs  sys.rs  tuple.rs  type_conversions.rs
lib-erlangrt/src/native_fun/lists/: misc.rs  mod.rs
lib-erlangrt/src/native_fun/maps/: mod.rs  ops.rs
lib-erlangrt/src/rt_util/: bin_reader.rs  ext_term_format.rs
lib-erlangrt/src/term/: compare.rs  heap_walker.rs  mod.rs
zeptobeam/: Cargo.toml
zeptobeam/src/: agent_adapter.rs  config_loader.rs  config_watcher.rs  lib.rs  llm_bridge.rs  main.rs  runtime_ops.rs  swarm.rs
zeptobeam/tests/: integration.rs  v4_gate.rs
zeptovm/: Cargo.toml
zeptovm/src/: behavior.rs  durable_handle.rs  error.rs  lib.rs  link.rs  mailbox.rs  pid.rs  process.rs  registry.rs  supervisor.rs
zeptovm/src/control/: admission.rs  budget.rs  mod.rs  policy.rs  provider_gate.rs
zeptovm/src/core/: behavior.rs  effect.rs  message.rs  mod.rs  object.rs  step_result.rs  supervisor.rs  timer.rs  turn_context.rs
zeptovm/src/durability/: artifact_store.rs  checkpoint.rs  idempotency.rs  journal.rs  mod.rs  recovery.rs  snapshot.rs  timer_store.rs  wal.rs
zeptovm/src/effects/: anthropic.rs  config.rs  http_worker.rs  mod.rs  openai.rs  provider.rs
zeptovm/src/kernel/: approval_http.rs  approval_store.rs  compensation.rs  event_bus.rs  mailbox.rs  metrics.rs  mod.rs  name_registry.rs  process_table.rs  reactor.rs  recovery.rs  run_queue.rs  runtime.rs  scheduler.rs  supervisor_behavior.rs  timer_wheel.rs  turn_executor.rs
zeptovm/tests/: integration_llm.rs  phase1_gate.rs  phase2_gate.rs  v0_gate.rs  v1_exit_signals.rs  v1_gate.rs  v2_gate.rs  v3_gate.rs
(+108 files in other folders)
