[package]
name = "zeptovm"
version = "0.1.0"
edition = "2021"
description = "Async-native process runtime with OTP-style supervision"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
dashmap = "6"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "test-util"] }
